# sat-val-framework

./: .gitignore  README.md  pyproject.toml
example/: README.md  TODO  get_collocation_events.py  requirements.yml
example/atl09_cloudnet/definitions/: acf.py  collocation.py  indices.py  raw_atl09.py  raw_cloudnet.py  vcf.py
example/atl09_cloudnet/holmes_et_al_2019/: MIxnyn.C  README.md  python_interface.py
example/atl09_cloudnet/scripts/: compute_MI.py  compute_MI_histogram.py  compute_MI_holmes.py  compute_MI_with_confidence.py  compute_acfs_per_event.py  compute_vcfs_per_event.py  consolidate_collocation_event_lists.py  consolidate_vcfs_per_event_batches.py  get_collocation_events.py  merge_MI_with_confidence.py
example/definitions/: cloudnet_decode.py  collocation.py  raw_atl09.py  raw_cloudnet.py  vcf.py
example/downloading_atl09/: README.md  create_site_geojson.py  generate_harmony_requests.py  get-harmony-job-status
example/downloading_atl09/urls_by_id/: get_job_sizes  get_job_urls
example/figures/common/: MI_plots.py  colormaps.py  common.py  copula.py  handle_MI_datasets.py  handle_parametristions.py  handle_sites.py  handle_vcfs.py  rho_orbits.py  synthetic_data.py
example/figures/figure_2_mutual_information_schematic/: figure.py
example/figures/figure_3_data-contamination/: figure.py
example/local_tests/: dev_HistogramMutualInformation.ipynb  test_CollocationEventList.ipynb
sat-val-framework/: __init__.py  definitions.py  usable.py
sat_val_framework/: README.md  implement.py  test_implement.py  usable.py
(+39 files in other folders)
